--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
+              <a href="{{ site.baseurl }}/coworking">Co-Working</a>
+
               <a href="{{ site.baseurl }}/about">About</a>
             </nav>
           </header>
