--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
               <a href="{{ site.baseurl }}/coworking">Co-Working</a>
-
+              <a href="{{ site.baseurl }}/members">Members</a>
               <a href="{{ site.baseurl }}/about">About</a>
             </nav>
           </header>
