--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
               <a href="{{ site.baseurl }}/">Home</a>
               <a href="{{ site.baseurl }}/coworking">Co-Working</a>
               <a href="{{ site.baseurl }}/members">Members</a>
-              <a href="{{ site.baseurl }}/about">About</a>
+              <a href="{{ site.baseurl }}/misc">Misc</a>
             </nav>
           </header>
         </div>
