Adding people's lab and team to member's page

--- a/_includes/archive-people-index.html
+++ b/_includes/archive-people-index.html
@@ -13,5 +13,8 @@
     <div class="people-name">
         {{ post.name }}
     </div>
+    <div class="people-lab">
+        {{ post.lab }} • {{ post.team }}
+    </div>
 
 </div>
