--- a/assets/bigre.css
+++ b/assets/bigre.css
@@ -16,7 +16,6 @@
     float: left;
     position: relative;
     width: 150px;
-    height: 150px;
     overflow: hidden;
     text-align: center;
     z-index: 0;
@@ -74,12 +73,11 @@
     display: table;
 }
 
-.people-name {
+.people-name, .people-lab {
     font-weight: bold;
     font-size: 80%;
     display: block;
     width: 150px;
     text-align: center;
-
 }
 
