--- a/assets/bigre.css
+++ b/assets/bigre.css
@@ -1,3 +1,9 @@
+.container {
+    width: 850px;
+    padding-bottom: 100px;
+}
+
+
 .people {
     padding-top: 25px;
     padding-bottom: 50px;
@@ -8,7 +14,6 @@
     padding-bottom: 25px;
     padding-right: 50px;
     float: left;
-    width: 180px;
 }
 
 
