--- a/assets/bigre.css
+++ b/assets/bigre.css
@@ -1,3 +1,7 @@
+.container {
+    max-width: 850px;
+}
+
 .people {
     padding-top: 25px;
     padding-bottom: 50px;
@@ -8,7 +12,7 @@
     padding-bottom: 25px;
     padding-right: 50px;
     float: left;
-    height: 220px;
+    height: 230px;
 }
 
 
