FIX Magali's description now works fine

--- a/_includes/archive-people-index.html
+++ b/_includes/archive-people-index.html
@@ -10,6 +10,11 @@
 	    class="attachment-thumbnail size-thumbnail wp-post-image" alt="" />
 	{% endif %}
     </div>
+
+    <div class="people-name">
+	{{ post.name }}
+    </div>
+
     <div class="people-lab">
         {{ post.lab }} • {{ post.team }}
     </div>
